--- a/deno.json
+++ b/deno.json
@@ -1,17 +1,19 @@
 {
   "workspace": [
+    "./packages/app",
     "./packages/core",
     "./packages/runner"
   ],
   "nodeModulesDir": "auto",
   "tasks": {
+    "dev:app": "deno task --config ./packages/app/deno.json dev",
     "dev:core": "deno task --config ./packages/core/deno.json dev",
     "dev:runner": "deno task --config ./packages/runner/deno.json dev",
-    "test": "DENO_ENV=development deno test -A",
+    "test": "STRIPE_USE_MOCK=true deno test -A",
     "db:docker": "docker container rm stackcore-pg --force || true && docker run --name stackcore-pg -e POSTGRES_PASSWORD=password -e POSTGRES_USER=user -e POSTGRES_DB=core -p 5432:5432 -d postgres:latest",
-    "db:migrate": "DENO_ENV=development deno task --config ./packages/core/deno.json migrate -A",
-    "stripe:create-prices": "deno run -A --env-file=Deno.env ./packages/core/src/stripe/scripts/createPricesForProduct.ts",
-    "stripe:cli": "docker run --rm -it --env-file Deno.env stripe/stripe-cli:latest",
+    "db:migrate": "deno task --config ./packages/core/deno.json migrate -A",
+    "stripe:create-prices": "deno run -A --env-file=.env ./packages/core/src/stripe/scripts/createPricesForProduct.ts",
+    "stripe:cli": "docker run --rm -it --env-file=.env stripe/stripe-cli:latest",
     "stripe:forward": "deno task stripe:cli listen --forward-to http://localhost:3000/billing/webhook",
     "stripe:mock": "docker run --rm -it -p 12111-12112:12111-12112 stripe/stripe-mock:latest"
   },
