--- a/packages/app/deno.json
+++ b/packages/app/deno.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "exports": "./src/index.ts",
   "imports": {
+    "@radix-ui/react-toggle": "npm:@radix-ui/react-toggle@^1.1.9",
+    "@radix-ui/react-toggle-group": "npm:@radix-ui/react-toggle-group@^1.1.10",
     "@stackcore/core/responses": "../core/src/api/responseType.ts",
     "@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.4",
     "@hookform/resolvers": "npm:@hookform/resolvers@^5.0.1",
