--- a/packages/app/deno.json
+++ b/packages/app/deno.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "exports": "./src/index.ts",
   "imports": {
+    "@radix-ui/react-tabs": "npm:@radix-ui/react-tabs@^1.1.12",
     "@radix-ui/react-toggle": "npm:@radix-ui/react-toggle@^1.1.9",
     "@radix-ui/react-toggle-group": "npm:@radix-ui/react-toggle-group@^1.1.10",
     "@stackcore/core/responses": "../core/src/api/responseType.ts",
