--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,7 @@
 {
   "workspace": [
     "./packages/app",
-    "./packages/core",
-    "./packages/runner"
+    "./packages/core"
   ],
   "nodeModulesDir": "auto",
   "tasks": {
