--- a/packages/app/deno.json
+++ b/packages/app/deno.json
@@ -7,6 +7,7 @@
     "@radix-ui/react-toggle": "npm:@radix-ui/react-toggle@^1.1.9",
     "@radix-ui/react-toggle-group": "npm:@radix-ui/react-toggle-group@^1.1.10",
     "@stackcore/core/responses": "../core/src/api/responseType.ts",
+    "@stackcore/core/manifest": "../core/src/manifest/types.ts",
     "@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.4",
     "@hookform/resolvers": "npm:@hookform/resolvers@^5.0.1",
     "@radix-ui/react-dialog": "npm:@radix-ui/react-dialog@^1.1.13",
