--- a/packages/core/deno.json
+++ b/packages/core/deno.json
@@ -4,7 +4,7 @@
   "tasks": {
     "dev": "deno run --env-file=../../.env -A --watch src/index.ts",
     "migrate": "deno run -A src/db/migrator.ts",
-    "build": "deno compile --allow-all --output ./dist/core ./src/index.ts"
+    "build": "deno compile --allow-all --allow-scripts --node-modules-dir=auto --output ./dist/core ./src/index.ts"
   },
   "imports": {
     "@oak/oak": "jsr:@oak/oak@^17.1.4",
