--- a/packages/core/deno.json
+++ b/packages/core/deno.json
@@ -4,7 +4,7 @@
   "tasks": {
     "dev": "deno run --env-file=../../.env -A --watch src/index.ts",
     "migrate": "deno run -A src/db/migrator.ts",
-    "build": "deno compile --allow-all --allow-scripts --node-modules-dir=auto --output ./dist/core ./src/index.ts"
+    "build": "deno compile --allow-all --include src --output ./dist/core ./src/index.ts"
   },
   "imports": {
     "@oak/oak": "jsr:@oak/oak@^17.1.4",
@@ -17,7 +17,7 @@
     "pg": "npm:pg@^8.16.0",
     "pg-pool": "npm:pg-pool@^3.10.0",
     "djwt": "https://deno.land/x/djwt@v3.0.2/mod.ts",
-    "stripe": "npm:stripe@^18.1.0",
+    "stripe": "npm:stripe@^18.2.1",
     "zod": "npm:zod@^3.24.4"
   }
 }
