some changes with CI and compile

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Build Deno application
         run: |
-          deno install --allow-scripts
+          deno install --allow-scripts --reload
           deno task build:core
 
       # GitHub Container Registry login
