--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -41,11 +41,11 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # GCP Authentication to be able to push to GCP Artifact Registry
+      # GCP Authentication
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY_ARTIFACT_REGISTRY }}
+          credentials_json: ${{ secrets.GCP_SA_KEY_CLOUD_RUN }}
 
       # Configure Docker for GCP
       - name: Configure Docker for GCP Artifact Registry
@@ -73,12 +73,7 @@ jobs:
           echo "GCP: ${{ env.GCP_REGISTRY }}/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_REPOSITORY }}/${{ env.GCP_IMAGE_NAME }}:${{ github.ref_name }}"
           echo "GCP: ${{ env.GCP_REGISTRY }}/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_REPOSITORY }}/${{ env.GCP_IMAGE_NAME }}:${{ github.sha }}"
 
-      # GCP Authentication to be able to deploy to Cloud Run
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GCP_SA_KEY_CLOUD_RUN }}
-
+      # Update Cloud Run service with the new image
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy stackcore-core \
