--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY_CLOUD_RUN }}
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
 
       # Configure Docker for GCP
       - name: Configure Docker for GCP Artifact Registry
