--- a/packages/app/deno.json
+++ b/packages/app/deno.json
@@ -39,6 +39,7 @@
     "react-router": "npm:react-router@^7.5.3",
     "sonner": "npm:sonner@^2.0.5",
     "tailwind-merge": "npm:tailwind-merge@^3.3.0",
+    "tailwindcss": "npm:tailwindcss@^4.1.8",
     "tw-animate-css": "npm:tw-animate-css@^1.3.4",
     "vite": "npm:vite@^6.3.5",
     "zod": "npm:zod@^3.25.51"
