--- a/deno.json
+++ b/deno.json
@@ -12,7 +12,7 @@
     "build:app": "deno task --config ./packages/app/deno.json build",
     "build:core": "deno task --config ./packages/core/deno.json build",
     "test": "STRIPE_USE_MOCK=true deno test -A",
-    "db:docker": "docker container rm stackcore-pg --force || true && docker run --name stackcore-pg -e POSTGRES_PASSWORD=password -e POSTGRES_USER=user -e POSTGRES_DB=core -p 5432:5432 -d postgres:latest",
+    "db:docker": "docker container rm stackcore-pg --force || true && docker run --name stackcore-pg -e POSTGRES_PASSWORD=password -e POSTGRES_USER=user -e POSTGRES_DB=core -p 5432:5432 -d postgres:17",
     "db:migrate": "deno task --config ./packages/core/deno.json migrate -A",
     "stripe:create-products": "deno run -A --env-file=.env ./packages/core/src/stripe/scripts/createProducts.ts",
     "stripe:cli": "docker run --rm -it --env-file=.env stripe/stripe-cli:latest",
