change in billing

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 STRIPE_API_KEY=
 WEBHOOK_SECRET=
+STRIPE_METER_CREDIT_USAGE_METER_ID=
 STRIPE_PRODUCT_BASIC_LICENSE_MONTHLY_PRICE_ID=
 STRIPE_PRODUCT_BASIC_LICENSE_YEARLY_PRICE_ID=
 STRIPE_PRODUCT_BASIC_MONTHLY_METER_CREDIT_USAGE_PRICE_ID=
