--- a/packages/app/deno.json
+++ b/packages/app/deno.json
@@ -21,7 +21,7 @@
     "@tailwindcss/vite": "npm:@tailwindcss/vite@^4.1.8",
     "@tanstack/react-table": "npm:@tanstack/react-table@^8.21.3",
     "@types/cytoscape-fcose": "npm:@types/cytoscape-fcose@^2.2.4",
-    "@types/react": "npm:@types/react@^19.1.3",
+    "@types/react": "npm:@types/react@^19.1.6",
     "@types/react-dom": "npm:@types/react-dom@^19.1.3",
     "@types/react-router": "npm:@types/react-router@^5.1.20",
     "@vitejs/plugin-react": "npm:@vitejs/plugin-react@^4.4.1",
@@ -50,6 +50,8 @@
     "start": "deno run -A npm:vite preview"
   },
   "compilerOptions": {
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
+    "jsxImportSourceTypes": "@types/react"
   }
 }
