--- a/packages/core/deno.json
+++ b/packages/core/deno.json
@@ -8,6 +8,7 @@
   },
   "imports": {
     "@oak/oak": "jsr:@oak/oak@^17.1.4",
+    "@sentry/deno": "npm:@sentry/deno@^9.28.1",
     "@std/assert": "jsr:@std/assert@1",
     "@std/expect": "jsr:@std/expect@^1.0.16",
     "@std/path": "jsr:@std/path@^1.0.9",
