--- a/.github/workflows/test-lint.yml
+++ b/.github/workflows/test-lint.yml
@@ -40,6 +40,13 @@ jobs:
         ports:
           - 12111:12111
           - 12112:12112
+      fake-gcs-server:
+        image: fsouza/fake-gcs-server:latest
+        ports:
+          - 4443:4443
+        options: >-
+          --scheme http
+          --public-host localhost:4443
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
