--- a/.github/workflows/test-lint.yml
+++ b/.github/workflows/test-lint.yml
@@ -45,8 +45,8 @@ jobs:
         ports:
           - 4443:4443
         options: >-
-          --scheme http
-          --public-host localhost:4443
+          -scheme http
+          -public-host localhost:4443
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
