--- a/packages/core/deno.json
+++ b/packages/core/deno.json
@@ -4,10 +4,13 @@
   "tasks": {
     "dev": "deno run --env-file=../../.env -A --watch src/index.ts",
     "migrate": "deno run -A src/db/scripts/migrate.ts",
-    "build": "deno compile --allow-all --include src/db/migrations --output ./dist/core ./src/index.ts"
+    "build": "deno compile --allow-all --include src/db/migrations --output ./dist/core ./src/index.ts",
+    "email": "email dev -d src/email/templates"
   },
   "imports": {
     "@oak/oak": "jsr:@oak/oak@^17.1.4",
+    "@react-email/components": "npm:@react-email/components@^0.1.0",
+    "@react-email/render": "npm:@react-email/render@^1.1.2",
     "@sentry/deno": "npm:@sentry/deno@^9.28.1",
     "@std/assert": "jsr:@std/assert@1",
     "@std/expect": "jsr:@std/expect@^1.0.16",
@@ -18,6 +21,9 @@
     "pg": "npm:pg@^8.16.0",
     "pg-pool": "npm:pg-pool@^3.10.0",
     "djwt": "https://deno.land/x/djwt@v3.0.2/mod.ts",
+    "react": "npm:react@^19.1.0",
+    "react-dom": "npm:react-dom@^19.1.0",
+    "react-email": "npm:react-email@^4.0.16",
     "resend": "npm:resend@^4.5.2",
     "stripe": "npm:stripe@^18.2.1",
     "zod": "npm:zod@^3.24.4"
