Fixes for react email to run in the deno env

--- a/packages/core/deno.json
+++ b/packages/core/deno.json
@@ -27,5 +27,8 @@
     "resend": "npm:resend@^4.5.2",
     "stripe": "npm:stripe@^18.2.1",
     "zod": "npm:zod@^3.24.4"
+  },
+  "compilerOptions": {
+    "jsx": "react"
   }
 }
