--- a/packages/core/deno.json
+++ b/packages/core/deno.json
@@ -11,13 +11,15 @@
     "@google-cloud/storage": "npm:@google-cloud/storage@^7.16.0",
     "@oak/oak": "jsr:@oak/oak@^17.1.4",
     "@react-email/components": "npm:@react-email/components@^0.1.0",
-    "@react-email/render": "npm:@react-email/render@^1.1.2",
     "@sentry/deno": "npm:@sentry/deno@^9.28.1",
     "@std/assert": "jsr:@std/assert@1",
     "@std/expect": "jsr:@std/expect@^1.0.16",
     "@std/path": "jsr:@std/path@^1.0.9",
+    "@types/html-to-text": "npm:@types/html-to-text@^9.0.4",
     "@types/pg": "npm:@types/pg@^8.15.2",
     "@types/pg-pool": "npm:@types/pg-pool@^2.0.6",
+    "@types/react": "npm:@types/react@^19.1.8",
+    "html-to-text": "npm:html-to-text@^9.0.5",
     "kysely": "npm:kysely@^0.28.2",
     "pg": "npm:pg@^8.16.0",
     "pg-pool": "npm:pg-pool@^3.10.0",
@@ -30,6 +32,8 @@
     "zod": "npm:zod@^3.24.4"
   },
   "compilerOptions": {
-    "jsx": "react"
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
+    "jsxImportSourceTypes": "@types/react"
   }
 }
