--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,20 @@
-STRIPE_API_KEY=
-WEBHOOK_SECRET=
-STRIPE_METER_CREDIT_USAGE_METER_ID=
-STRIPE_PRODUCT_BASIC_LICENSE_MONTHLY_PRICE_ID=
-STRIPE_PRODUCT_BASIC_LICENSE_YEARLY_PRICE_ID=
-STRIPE_PRODUCT_BASIC_MONTHLY_METER_CREDIT_USAGE_PRICE_ID=
-STRIPE_PRODUCT_PRO_LICENSE_MONTHLY_PRICE_ID=
-STRIPE_PRODUCT_PRO_LICENSE_YEARLY_PRICE_ID=
-STRIPE_PRODUCT_PRO_MONTHLY_METER_CREDIT_USAGE_PRICE_ID=
-STRIPE_PRODUCT_PREMIUM_LICENSE_MONTHLY_PRICE_ID=
-STRIPE_PRODUCT_PREMIUM_LICENSE_YEARLY_PRICE_ID=
-STRIPE_PRODUCT_PREMIUM_MONTHLY_METER_CREDIT_USAGE_PRICE_ID=
+# Stripe Configuration
+# Get these from your Stripe Dashboard: https://dashboard.stripe.com/apikeys
+STRIPE_API_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+# Stripe Product and Price IDs
+# Create these in your Stripe Dashboard under Products & Prices
+# You can use the convinience script in /packages/core/src/stripe/scripts/createObjects.ts
+# To generate these if you start from a fresh stripe account
+STRIPE_METER_CREDIT_USAGE_METER_ID=price_your_meter_credit_price_id_here
+STRIPE_PRODUCT_BASIC_MONTHLY_PRICE_ID=price_basic_monthly_price_id_here
+STRIPE_PRODUCT_PRO_MONTHLY_PRICE_ID=price_pro_monthly_price_id_here
+STRIPE_PRODUCT_PRO_YEARLY_PRICE_ID=price_pro_yearly_price_id_here
+STRIPE_PRODUCT_PREMIUM_MONTHLY_PRICE_ID=price_premium_monthly_price_id_here
+STRIPE_PRODUCT_PREMIUM_YEARLY_PRICE_ID=price_premium_yearly_price_id_here
+
+# Development/Testing Flags, for convenience
+SKIP_OTP=true
+EMAIL_USE_CONSOLE=true
+GCP_USE_FAKE_GCS_SERVER=true
