--- a/deno.json
+++ b/deno.json
@@ -1,20 +1,24 @@
 {
   "workspace": [
     "./packages/app",
-    "./packages/core"
+    "./packages/core",
+    "./packages/db",
+    "./packages/settings",
+    "./packages/storage",
+    "./packages/labeler"
   ],
   "nodeModulesDir": "auto",
   "lock": false,
   "tasks": {
     "dev:app": "deno task --config ./packages/app/deno.json dev",
     "dev:core": "deno task --config ./packages/core/deno.json dev",
-    "dev:runner": "deno task --config ./packages/runner/deno.json dev",
+    "dev:labeler": "deno task --config ./packages/labeler/deno.json dev",
     "build:app": "deno task --config ./packages/app/deno.json build",
     "build:core": "deno task --config ./packages/core/deno.json build",
-    "test": "STRIPE_USE_MOCK=true GCP_USE_FAKE_GCS_SERVER=true deno test -A",
+    "build:labeler": "deno task --config ./packages/labeler/deno.json build",
+    "test": "STRIPE_USE_MOCK=true USE_MOCK_GCP_STORAGE=true deno test -A",
     "db:docker": "docker container rm stackcore-pg --force || true && docker run --name stackcore-pg -e POSTGRES_PASSWORD=password -e POSTGRES_USER=user -e POSTGRES_DB=core -p 5432:5432 -d postgres:17",
-    "db:migrate": "deno task --config ./packages/core/deno.json migrate -A",
-    "stripe:create-products": "deno run -A --env-file=.env ./packages/core/src/stripe/scripts/createProducts.ts",
+    "db:migrate": "deno run -A ./packages/db/src/scripts/migrate.ts",
     "stripe:cli": "docker run --rm -it --env-file=.env stripe/stripe-cli:latest",
     "stripe:forward": "deno task stripe:cli listen --forward-to http://host.docker.internal:4000/billing/webhook",
     "stripe:mock": "docker run --rm -it -p 12111-12112:12111-12112 stripe/stripe-mock:latest",
