--- a/packages/app/deno.json
+++ b/packages/app/deno.json
@@ -15,8 +15,8 @@
     "@radix-ui/react-slot": "npm:@radix-ui/react-slot@^1.2.3",
     "@radix-ui/react-tabs": "npm:@radix-ui/react-tabs@^1.1.12",
     "@radix-ui/react-tooltip": "npm:@radix-ui/react-tooltip@^1.2.7",
-    "@stackcore/core/responses": "../core/src/api/responseType.ts",
-    "@stackcore/core/manifest": "../core/src/manifest/types.ts",
+    "@stackcore/coreApiTypes": "../coreApiTypes/src/index.ts",
+    "@stackcore/manifests": "../manifests/src/index.ts",
     "@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.4",
     "@tailwindcss/vite": "npm:@tailwindcss/vite@^4.1.8",
     "@tanstack/react-table": "npm:@tanstack/react-table@^8.21.3",
